--- a/content/manual/problems/grand-unified-theory.mdx
+++ b/content/manual/problems/grand-unified-theory.mdx
@@ -1,10 +1,140 @@
-# Grand Unified Theory (Test Notes)
+# Unification Is Not a Guess — It Is Forced
 
-If you can see this text under **Notes** on the Grand Unified Theory problem page, then:
+For fifty years, Grand Unified Theories have suffered from a credibility problem.
 
-1) the manual MDX pipeline is working, and  
-2) the issue with Standard Model is inside that MDX file’s content (parse/import failure).
+Not because they are wrong —
+but because they are optional.
 
-## Next step
+Starting from the same low-energy facts the Standard Model gauge group, its chiral fermion spectrum, anomaly cancellation, and the existence of neutrino mass theorists have written down many ultraviolet completions. SU(5). Flipped SU(5). SO(10). E6. Variants with extra Higgs sectors, extra thresholds, extra tuning knobs.
 
-If this test renders correctly, we’ll fix the Standard Model MDX by removing MDX hazards (most commonly unescaped `{` `}` in LaTeX).
+All of them can be made to work ***if you choose enough structure by hand***.
+
+That freedom is not a virtue.
+It is a failure of selection.
+
+This paper takes a different position:
+
+> ***If a unified theory is real, it should not be chosen. It should be forced by the record.***
+
+---
+
+## The Core Claim (No Hedge)
+
+Within a determinant-closed admissibility framework, one that enforces anomaly closure, fermion completeness, neutrino rigidity, and explicit minimality after record-quotienting **the Standard Model record predicates force a unique traditional Grand Unified completion**.
+
+That completion is **SO(10)**.
+
+Not as an ansatz.
+Not as an aesthetic preference.
+Not because it is popular.
+
+**Because every alternative costs more structure than the record can justify.**
+
+---
+
+## What “Determinant-Closed” Actually Means
+
+This is not a new symmetry proposal.
+It is a **selection principle**.
+
+A candidate completion is treated as law-bearing only if it survives a fixed-point recursion:
+
+* remove record-silent structure,
+* collapse prediction-degenerate branches,
+* complete to a minimal, stable form.
+
+Anything that survives this process is admissible.
+Anything that does not is model-building noise.
+
+Minimality is not rhetorical. It is enforced by an explicit complexity functional that penalizes:
+
+* residual anomalies (post-quotient),
+* fragmented fermion hosting,
+* excessive Higgs or breaking structure,
+* unnecessary group overgrowth.
+
+Nothing is tuned.
+Nothing is fit.
+Nothing is forgiven because it “might work.”
+
+---
+
+## Why SO(10) Survives and Everything Else Fails
+
+Once neutrino mass is treated as a **hard record predicate**, the space of admissible completions collapses violently.
+
+Here is what the framework forces:
+
+* **Anomaly closure must hold after quotienting**, not merely “in principle” in a larger UV story.
+* **One generation must be hosted economically**, without fragmenting chiral matter across unrelated irreducible representations.
+* **The right-handed neutrino cannot be an external patch.** It must be internal to the carrier.
+* **The neutrino sector must be rigid**, collapsing to the seesaw equivalence class without tuning.
+* **Symmetry breaking must be stable**, minimal, and free of non-record intermediate clutter.
+
+Under these conditions:
+
+* Minimal SU(5) fails neutrino rigidity.
+* SU(5) plus singlets survives only by paying extra Higgs and breaking cost.
+* Flipped SU(5) incurs non-record branching penalties.
+* Larger groups (E6 and above) introduce exotic surplus not forced by the record.
+* Multi-stage or overbuilt Higgs sectors inflate complexity without adding law.
+
+**SO(10) is the only carrier that closes all constraints at once, with minimal cost.**
+
+---
+
+## The Result Is Traditional - The Logic Is Not
+
+What emerges looks familiar:
+
+* One generation fits into a single irreducible.
+* Anomalies cancel automatically.
+* Neutrino masses arise naturally.
+* Hypercharge normalization locks to the canonical 5/3 factor.
+* A minimal Higgs architecture suffices.
+* Coupling near-unification is explainable without repair structure.
+
+But the **status** of these facts is different.
+
+They are not motivations.
+They are **outputs**.
+
+The framework does not assume unification.
+It shows that **unification is the only law-bearing completion compatible with the record**.
+
+---
+
+## This Is Not Model-Building
+
+Nothing in this paper:
+
+* fits Yukawa matrices,
+* tunes thresholds,
+* chooses symmetry-breaking chains by hand,
+* invokes aesthetics,
+* assumes supersymmetry,
+* assumes string theory,
+* or assumes a unified group at the start.
+
+The conclusion is narrower — and stronger:
+
+> **Given what is already observed, the freedom to choose a GUT evaporates.**
+
+---
+
+## Why This Matters
+
+The usual criticism of GUTs is that they explain too much freedom with too many assumptions.
+
+This work flips that criticism:
+
+* If unification were arbitrary, it would not survive determinant-closure.
+* If SO(10) were merely convenient, it would lose to cheaper alternatives.
+* If neutrino mass were an afterthought, the selection would not be rigid.
+
+Instead, the framework shows something sharper:
+
+> **Once the record is taken seriously, unification stops being optional.**
+
+SO(10) is not selected because it is elegant.
+It is selected because **nothing else survives closure.**
