--- a/content/manual/problems/grand-unified-theory.mdx
+++ b/content/manual/problems/grand-unified-theory.mdx
@@ -1,8 +1,8 @@
-# Unification Is Not a Guess — It Is Forced
+# Unification Is Not a Guess - It Is Forced
 
 For fifty years, Grand Unified Theories have suffered from a credibility problem.
 
-Not because they are wrong —
+Not because they are wrong -
 but because they are optional.
 
 Starting from the same low-energy facts the Standard Model gauge group, its chiral fermion spectrum, anomaly cancellation, and the existence of neutrino mass theorists have written down many ultraviolet completions. SU(5). Flipped SU(5). SO(10). E6. Variants with extra Higgs sectors, extra thresholds, extra tuning knobs.
@@ -138,3 +138,4 @@ Instead, the framework shows something sharper:
 
 SO(10) is not selected because it is elegant.
 It is selected because **nothing else survives closure.**
+
