--- a/content/manual/problems/cosmological-constant.mdx
+++ b/content/manual/problems/cosmological-constant.mdx
@@ -7,7 +7,7 @@ The cosmological constant problem (CCP) is usually framed as a mismatch: naive v
 This program takes a harder line:
 
 > **The CCP is not solved by inventing a new sector or a new symmetry first. It is solved by making the vacuum subtraction non-arbitrary.**
-> If you cannot specify the counterterm canonically, you don’t have a physical Lambda — you have a convention.
+> If you cannot specify the counterterm canonically, you don’t have a physical Lambda, you have a convention.
 
 The papers below provide the evidence; this page provides the unified narrative.
 
@@ -24,7 +24,7 @@ This is: **the freedom that creates the CCP is removed by a canonical calibratio
 
 ## Failure of the Standard Framing
 
-In QFT, “vacuum energy” is not a measurable number until you fix a subtraction convention. In orthodox practice, that subtraction is regulator-dependent and is chosen to make the theory workable. That’s fine for lab physics — until you couple to gravity, where the subtraction becomes geometry.
+In QFT, “vacuum energy” is not a measurable number until you fix a subtraction convention. In orthodox practice, that subtraction is regulator-dependent and is chosen to make the theory workable. That’s fine for lab physics until you couple to gravity, where the subtraction becomes geometry.
 
 So the CCP is, structurally:
 
@@ -51,7 +51,7 @@ A three-window Fejér evaluator enforces:
 That combination forces a **universal DC gain**:
 WT(0) = 3/(32π) + O(T^-2).
 
-Meaning: the “constant you’re allowed to keep” is not a tuning dial anymore — it’s a fixed intercept, with a falsifiable T^-2 convergence law.
+Meaning: the “constant you’re allowed to keep” is not a tuning dial anymore. it’s a fixed intercept, with a falsifiable T^-2 convergence law.
 
 ### 2) Certified observables: fix the counterterm with heat-kernel rigidity
 
@@ -67,7 +67,7 @@ Q = D + BQG
 
 that is OS-positive and reconstructs to a local Lorentzian QFT with the spectrum condition.
 
-This matters: lots of “CCP fixes” implicitly wreck reflection positivity or causality. This one can’t — it’s built to preserve them.
+This matters: lots of “CCP fixes” implicitly wreck reflection positivity or causality. This one can’t as it’s built to preserve them.
 
 It also forces a unique atomic coefficient law:
 alphak = (32/3) mk.
