--- a/content/manual/problems/arrow-of-time.mdx
+++ b/content/manual/problems/arrow-of-time.mdx
@@ -2,14 +2,14 @@
 
 ## Time does not flow because dynamics say so.
 
-## It flows because **irreversibility is forced**.
+## It flows because irreversibility is forced.
 
 Most physical laws are time-reversal symmetric.
 Yet the world is not.
 
 Entropy increases. Records accumulate. Radiation disperses. Memory works in one direction only.
 
-For a century, physics has tried to explain this asymmetry by *adding something extra*:
+For a century, physics has tried to explain this asymmetry by adding ***something extra***:
 special initial conditions, coarse-graining choices, environments, observers, or appeals to probability.
 
 This program takes a sharper position:
@@ -24,7 +24,7 @@ This page provides the logic.
 
 ## Central Claim
 
-Within a broad but explicit admissible class of quantum systems, **irreversibility is unavoidable** once three conditions are met:
+Within a broad but explicit admissible class of quantum systems, irreversibility is unavoidable once three conditions are met:
 
 1. spectral positivity,
 2. calibrated coarse-graining,
@@ -49,7 +49,7 @@ Traditional accounts of the arrow of time fall into three categories:
 * **Environmental**: openness, decoherence, or baths create irreversibility.
 * **Cosmological**: the Past Hypothesis sets a low-entropy boundary.
 
-Each captures part of the truth but none explains **why irreversibility becomes mandatory** once certain structural features are present.
+Each captures part of the truth but none explains why irreversibility becomes mandatory once certain structural features are present.
 
 This framework isolates the missing piece:
 
@@ -62,7 +62,7 @@ Not as a story. As an inequality.
 ## The engine: spectral thermodynamics
 
 The construction does not start with entropy.
-It starts with **spectral data**.
+It starts with spectral data.
 
 Given a canonical generator built from:
 
@@ -82,7 +82,7 @@ From this single object, one builds:
 * a calibrated evaluator that kills spurious drift,
 * and a log-determinant Lyapunov functional.
 
-The arrow of time is not postulated, it's **read off** from how this object evolves.
+The arrow of time is not postulated, it's read off from how this object evolves.
 
 ---
 
@@ -90,8 +90,8 @@ The arrow of time is not postulated, it's **read off** from how this object evol
 
 At each spectral scale, two forces compete:
 
-* the **dissipation floor**, coming from calibrated spectral weight inside the packet window,
-* the **budget**, coming from leakage outside the window.
+* the dissipation floor, coming from calibrated spectral weight inside the packet window,
+* the budget, coming from leakage outside the window.
 
 The central result is brutally simple:
 
@@ -125,7 +125,7 @@ The framework also proves something negative and important:
 > **There is no strictly monotone arrow for all finite closed systems under exact unitary evolution.**
 
 This is not a limitation of the method.
-It is a **mathematical obstruction**.
+It is a mathematical obstruction.
 
 Poincaré recurrence and unitary reversibility forbid a universal arrow in that regime.
 
@@ -138,7 +138,7 @@ This no-go result does two things:
 
 ## The universality envelope 
 
-Within that constraint, the framework achieves **maximal universality**:
+Within that constraint, the framework achieves maximal universality:
 
 * **Open systems (GKLS / CPTP)**: strict arrow from spectral dissipation.
 * **Systems with continuous spectrum**: strict arrow from AC transfer.
@@ -162,7 +162,7 @@ These results mean:
 * entropy production has a fixed sign,
 * and time-reversed decay is structurally forbidden once the conditions are met.
 
-The arrow is **aligned** with energy flow, not chosen independently.
+The arrow is ***aligned*** with energy flow, not chosen independently.
 
 ---
 
@@ -171,7 +171,7 @@ The arrow is **aligned** with energy flow, not chosen independently.
 Null propagation plays a special role:
 
 * light carries no proper time,
-* but it carries **coherence**.
+* but it carries coherence.
 
 The framework cleanly separates:
 
@@ -208,7 +208,7 @@ This is why the construction naturally interfaces with:
 
 ## Significance
 
-This reframes the arrow of time from a philosophical problem into a **structural one**.
+This reframes the arrow of time from a philosophical problem into a structural one.
 
 The question is no longer:
 “Why does entropy increase?”
