--- a/content/manual/problems/arrow-of-time.mdx
+++ b/content/manual/problems/arrow-of-time.mdx
@@ -9,7 +9,7 @@ Yet the world is not.
 
 Entropy increases. Records accumulate. Radiation disperses. Memory works in one direction only.
 
-For a century, physics has tried to explain this asymmetry by adding ***something extra***:
+For a century, physics has tried to explain this asymmetry by adding ***'something extra'***:
 special initial conditions, coarse-graining choices, environments, observers, or appeals to probability.
 
 This program takes a sharper position:
