--- a/content/manual/problems/arrow-of-time.mdx
+++ b/content/manual/problems/arrow-of-time.mdx
@@ -5,7 +5,7 @@
 ## It flows because irreversibility is forced.
 
 Most physical laws are time-reversal symmetric.
-Yet the world is not.  $E = mc^2$
+Yet the world is not. 
 
 Entropy increases. Records accumulate. Radiation disperses. Memory works in one direction only.
 
