--- a/content/manual/problems/cosmological-constant.mdx
+++ b/content/manual/problems/cosmological-constant.mdx
@@ -2,12 +2,12 @@
 
 ## The vacuum energy isn’t “mysterious.” It’s **uncalibrated**.
 
-The cosmological constant problem (CCP) is usually framed as a mismatch: naive vacuum sums look like a disaster, but the observed vacuum energy density is tiny, about (2.2–2.3 meV)^4. That story has kept physics trapped between three bad options: tuning, anthropics, or modifying gravity.
+The cosmological constant problem (CCP) is usually framed as a mismatch: naive vacuum sums look like a disaster, but the observed vacuum energy density is tiny, about $(2.2\text{–}2.3\ \mathrm{meV})^4$. That story has kept physics trapped between three bad options: tuning, anthropics, or modifying gravity.
 
 This program takes a harder line:
 
 > **The CCP is not solved by inventing a new sector or a new symmetry first. It is solved by making the vacuum subtraction non-arbitrary.**
-> If you cannot specify the counterterm canonically, you don’t have a physical Lambda, you have a convention.
+> If you cannot specify the counterterm canonically, you don’t have a physical $\Lambda$, you have a convention.
 
 The papers below provide the evidence; this page provides the unified narrative.
 
@@ -15,7 +15,7 @@ The papers below provide the evidence; this page provides the unified narrative.
 
 ## Central Claim
 
-Within a broad admissible class of prescriptions, the physical cosmological constant (LambdaPhys) is **uniquely selected**, **positivity-compatible**, **RG-invariant**, **time-constant**, and **independent of regulator/window/line choices**.
+Within a broad admissible class of prescriptions, the physical cosmological constant ($\Lambda_{\mathrm{Phys}}$) is **uniquely selected**, **positivity-compatible**, **RG-invariant**, **time-constant**, and **independent of regulator/window/line choices**.
 
 This is not “we found a neat model.”
 This is: **the freedom that creates the CCP is removed by a canonical calibration and stability constraints.**
@@ -49,65 +49,73 @@ A three-window Fejér evaluator enforces:
 * **quadratic flatness** (removes the second drift mode)
 
 That combination forces a **universal DC gain**:
-WT(0) = 3/(32π) + O(T^-2).
+$$
+W_T(0) = \frac{3}{32\pi} + O(T^{-2}).
+$$
 
-Meaning: the “constant you’re allowed to keep” is not a tuning dial anymore. it’s a fixed intercept, with a falsifiable T^-2 convergence law.
+Meaning: the “constant you’re allowed to keep” is not a tuning dial anymore. it’s a fixed intercept, with a falsifiable $T^{-2}$ convergence law.
 
 ### 2) Certified observables: fix the counterterm with heat-kernel rigidity
 
-The calibration pins the Seeley–DeWitt counterterm via a unique additive constant, using certified combinations of (a0, a2, a4).
+The calibration pins the Seeley–DeWitt counterterm via a unique additive constant, using certified combinations of $(a_0,a_2,a_4)$.
 
 So the vacuum subtraction becomes a **derived observable**, not a choice.
 
-### 3) OS-positive spectral bridge: you don’t get to break positivity to “solve” Lambda
+### 3) OS-positive spectral bridge: you don’t get to break positivity to “solve” $\Lambda$
 
 The construction builds an order-zero bridge operator:
-
-Q = D + BQG
-
+$$
+Q = D + B_{QG}
+$$
 that is OS-positive and reconstructs to a local Lorentzian QFT with the spectrum condition.
 
 This matters: lots of “CCP fixes” implicitly wreck reflection positivity or causality. This one can’t as it’s built to preserve them.
 
 It also forces a unique atomic coefficient law:
-alphak = (32/3) mk.
+$$
+\alpha_k = \frac{32}{3}, m_k.
+$$
 
 That is a structural rigidity statement: if you try to alter the bridge, you violate OS positivity or SDW identities.
 
 ### 4) Energy inequality rigidity: forbid secular drift
 
-Even if you fix Lambda today, many frameworks allow it to drift slowly with time or state choice. This one forbids that.
+Even if you fix $\Lambda$ today, many frameworks allow it to drift slowly with time or state choice. This one forbids that.
 
 It uses:
 
 * state-universal quantum energy inequalities,
 * a sharp QNEC with rigidity,
-* and a superlinear Lyapunov bound that excludes slow drift (epsilon >= 1/16).
+* and a superlinear Lyapunov bound that excludes slow drift $(\varepsilon \ge 1/16)$.
 
-So “Lambda might slowly relax” is not permitted inside the admissible class. The calibrated vacuum energy is locked.
+So “$\Lambda$ might slowly relax” is not permitted inside the admissible class. The calibrated vacuum energy is locked.
 
 ### 5) A compact Lambda-sector EFT: constant curvature shift without on-shell stress
 
-Finally, a compact, anomaly-free hidden sector contributes a constant condensate (LambdaLambda) that produces constant curvature but **no on-shell stress tensor**:
-
-TLmunu = 0 on shell.
+Finally, a compact, anomaly-free hidden sector contributes a constant condensate ($\Lambda_\Lambda$) that produces constant curvature but **no on-shell stress tensor**:
+$$
+T^{\Lambda}_{\mu\nu} = 0 \quad \text{on shell}.
+$$
 
 This is the “no fifth force” safety valve: you get a geometric shift without introducing a new long-range mediator.
 
-A consistency bound pushes the portal scale high (MLambda >= 10^15 GeV), with MLambda ~ MPl as a clean choice.
+A consistency bound pushes the portal scale high $(M_\Lambda \ge 10^{15}\ \mathrm{GeV})$, with $M_\Lambda \sim M_{\mathrm{Pl}}$ as a clean choice.
 
 ---
 
 ## Where the Lambda-field fits: the delta-sector becomes rigid
 
-The CCP paper is not floating alone; it sits on a deeper rigidity result: once collapse/dissipation is represented by a positive generator K >= 0, the allowed scalar “spectral budget” is essentially unique.
+The CCP paper is not floating alone; it sits on a deeper rigidity result: once collapse/dissipation is represented by a positive generator $K \ge 0$, the allowed scalar “spectral budget” is essentially unique.
 
 That is the canonical Lambda-field:
+$$
+\Lambda_T = \frac{1 - e^{-T K}}{T K},
+$$
+$$
+D_T = -\log \det{}^*(\Lambda_T).
+$$
 
-LambdaT = (1 - exp(-T K)) / (T K)
-DT = -log det*(LambdaT)
-
-And the central punch: **once K is fixed, there is no independent functional freedom left in Lambda or its budget (up to bounded zero-point modulation).**
+And the central punch: **once $K$ is fixed, there is no independent functional freedom left in $\Lambda$ or its budget (up to bounded zero-point modulation).**
 
 The companion “lambda–Profiles” paper then shows how these budgets behave as lawful, comparable objects across systems (injective, stable, normalizable, and testable as profile curves).
 
@@ -118,10 +126,13 @@ This matters for CCP because vacuum energy is exactly where uncontrolled spectra
 ## The number is not hand-waved: the meV scale is reproduced
 
 The construction includes an explicit numerical derivation from cosmological parameters:
-
-rhoLambda = 3 MPl^2 H0^2 OmegaLambda
-
-giving rhoLambda^(1/4) ≈ 2.2 meV.
+$$
+\rho_\Lambda = 3 M_{\mathrm{Pl}}^2 H_0^2 \Omega_\Lambda
+$$
+giving
+$$
+\rho_\Lambda^{1/4} \approx 2.2\ \mathrm{meV}.
+$$
 
 That’s the observed scale obtained without “vacuum sum roulette,” and without inserting a small parameter by hand.
 
@@ -131,10 +142,10 @@ That’s the observed scale obtained without “vacuum sum roulette,” and with
 
 This is not a framework that survives by being vague. It comes with crisp falsifiers:
 
-* **w0 = -1 and wa = 0 exactly** (pure cosmological constant, not dynamical dark energy).
-* Any significant detection of |w0 + 1| >= 10^-3 or |wa| >= 10^-2 falsifies the construction.
-* Any measurable redshift drift of Lambda at >= 10^-3 over a Hubble time contradicts the drift-exclusion bound.
-* The Fejér calibration predicts a universal intercept plateau at 3/(32π) with O(T^-2) approach.
+* $w_0 = -1$ and $w_a = 0$ exactly (pure cosmological constant, not dynamical dark energy).
+* Any significant detection of $|w_0 + 1| \ge 10^{-3}$ or $|w_a| \ge 10^{-2}$ falsifies the construction.
+* Any measurable redshift drift of $\Lambda$ at $\ge 10^{-3}$ over a Hubble time contradicts the drift-exclusion bound.
+* The Fejér calibration predicts a universal intercept plateau at $3/(32\pi)$ with $O(T^{-2})$ approach.
 
 In short: it’s rigid enough to be wrong.
 
@@ -146,7 +157,7 @@ In short: it’s rigid enough to be wrong.
 
 * The vacuum counterterm can be fixed canonically from spectral data via a regulator-independent calibration.
 * Positivity/causality are preserved (OS positivity + reconstruction).
-* LambdaPhys is RG invariant and stable against secular drift.
+* $\Lambda_{\mathrm{Phys}}$ is RG invariant and stable against secular drift.
 * The observed meV scale is reproduced from cosmological parameters.
 
 **Not claimed:**
@@ -155,7 +166,3 @@ In short: it’s rigid enough to be wrong.
 * A new light particle.
 * A modification of local GR.
 * A “relaxation mechanism” that sneaks tuning back in.
-
----
-
-
